[gd_scene load_steps=9 format=3 uid="uid://tg5hpe27imcn"]

[ext_resource type="Script" uid="uid://b5fblmxsythel" path="res://_game_lib/environment/scripts/plot.gd" id="1_au4tu"]
[ext_resource type="Texture2D" uid="uid://v8ul4npj7fhl" path="res://_game_lib/environment/graphics/tile_watered.png" id="2_sny14"]
[ext_resource type="Script" uid="uid://djtyocbo8msei" path="res://_game_lib/environment/plant_sprite.gd" id="3_1gqli"]
[ext_resource type="Texture2D" uid="uid://dt1le5e1w11kc" path="res://_game_lib/UI/graphics/Extras.png" id="3_sny14"]
[ext_resource type="Texture2D" uid="uid://bjn804i0ihcyd" path="res://_game_lib/environment/seeds/tomato/tomato.png" id="4_srjbf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_srjbf"]
atlas = ExtResource("3_sny14")
region = Rect2(176, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd2om"]
atlas = ExtResource("3_sny14")
region = Rect2(224, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_xuk5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_srjbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd2om")
}],
"loop": true,
"name": &"active",
"speed": 4.0
}]

[node name="Plot2" type="Node2D"]
y_sort_enabled = true
scale = Vector2(1.5, 1.5)
script = ExtResource("1_au4tu")

[node name="GroundSprite" type="Sprite2D" parent="."]
position = Vector2(0, 1.9999993)
texture = ExtResource("2_sny14")

[node name="AnimatedSelection" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1.9999993)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xuk5j")
animation = &"active"
frame_progress = 0.18410808

[node name="PlantSprite" type="Sprite2D" parent="."]
position = Vector2(0, -3.3333337)
scale = Vector2(0.8, 0.75)
texture = ExtResource("4_srjbf")
hframes = 6
script = ExtResource("3_1gqli")
